# norelinorth_ai_assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  linter.yml
ai_assistant/: ai_assistant.module.def  ai_observability.py  ai_provider_api.py  ai_provider_resolver.py  ai_provider_wrapper.py  api.py  doctype_hooks.py  hooks.py  install.py  patches.txt  pyproject.toml
ai_assistant/ai_assistant/doctype/ai_assistant_session/: ai_assistant_session.json  ai_assistant_session.py
ai_assistant/ai_assistant/doctype/ai_message/: ai_message.json  ai_message.py
ai_assistant/ai_assistant/doctype/ai_provider/: ai_provider.json  ai_provider.py
ai_assistant/ai_assistant/page/ai_chat/: ai_chat.js  ai_chat.json  ai_chat.py
ai_assistant/ai_assistant/tests/: __init__.py  test_ai_chat.py  test_ai_observability.py  test_ai_provider.py  test_ai_provider_api.py  test_ai_provider_resolver.py  test_ai_provider_wrapper.py  test_api.py  test_doctype_hooks.py  test_install.py  test_integration.py
ai_assistant/ai_assistant/workspace/ai_assistant/: ai_assistant.json
ai_assistant/patches/: bootinfo_patch.py
ai_assistant/public/js/: ai_assistant_integration.js
ai_assistant/tests/: diagnose_ai_assistant.sh  final_ai_assistant_test.sh  test_ai_assistant_ui.sh
docs/: AI_PROVIDER_RESOLVER_USAGE.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALLATION_PACKAGE_GUIDE.md  LANGFUSE_FILTERING.md  LANGFUSE_OBSERVABILITY.md  LANGFUSE_QUICKSTART.md  MARKETPLACE_READY.md  PACKAGE_CONTENTS.md  PRIVACY_POLICY.md  README_EMBED_V2.md
norelinorth_ai_assistant/: ai_observability.py  hooks.py
