[project]
name = "norelinorth_ai_assistant"
version = "2.4.2"
description = "Embedded AI Assistant inside ERPNext DocTypes with Langfuse observability"
authors = [
    {name = "Noreli North"}
]
dependencies = [
    "frappe>=15.0.0",
    "langfuse>=2.0.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["frappe", "erpnext", "ai", "assistant", "langfuse", "llm", "openai", "chatgpt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/norelinorth/norelinorth_ai_assistant"
Documentation = "https://github.com/norelinorth/norelinorth_ai_assistant#readme"
Repository = "https://github.com/norelinorth/norelinorth_ai_assistant"
Changelog = "https://github.com/norelinorth/norelinorth_ai_assistant/blob/main/CHANGELOG.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".ruff_cache",
    "__pycache__",
    "*.pyc",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B017",   # assert blind exception (common in tests with frappe.throw)
    "C901",   # too complex
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are fine
"**/tests/*.py" = ["B007", "F841"]  # unused loop vars and unused assignments OK in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
